Aligned the elements in the center of the page for full screen of desktop. Fixed the filter bug and the searchbar bugs. Need to clean the code next.

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,20 @@
     padding: 0;
 }
 
+#root{
+    display: flex;
+    @media (min-width: 1300px){
+        justify-content: center;
+    }
+    
+}
 
+.App{
+   width: 1300px;
+   overflow: visible;
+   
 
+}
 
 
 .searchbar{
@@ -18,20 +30,25 @@
   
     margin: auto;
     &__header{
-        width: 90%;
+        width: 100%;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-content: center;
-        margin: 0 20px 40px 20px;
+        margin: 0 0 40px 0;
     }
   
-    &__title, &__number, &__clearblock{
+    &__title, &__number{
         display: inline-block;
         font-family: 'Montserrat', sans-serif;
         font-weight: bold;
+        margin: 30px;
     }
     &__title{
-        
+        @media (max-width: 450px){
+            font-size: 1.4em;
+            position: relative;
+            top: 8px;
+        }
     }
     &__number{
         position: relative;
