--- a/src/components/SearchBar.scss
+++ b/src/components/SearchBar.scss
@@ -19,7 +19,7 @@ $logo-color: #EB5757;
 }
 
 .searchbar{
-   
+    
     top: 0px;
     font-family: 'Mulish', sans-serif;
    
@@ -33,7 +33,7 @@ $logo-color: #EB5757;
     
     
     &__inputs, &__logo{
-        margin: 40px ;
+        margin: 40px 25px;
         position: relative;
 
         
@@ -170,26 +170,30 @@ $logo-color: #EB5757;
         @include searchbar-transition;
         position: fixed;
         overflow: visible;
-        &::before{
+        /*&::before{
             content: ' ';
             position: absolute;
             top: 0;
             width: 100%;
             height: 100px;
-        }
+        }*/
 
         .searchbar__location, .searchbar__guests{
-            width: 35%;
+            width: 30%;
             @include searchbar-transition;
         }
 
         .searchbar{
             &__inputs{
-                display: flex;
+                
                 flex-wrap: wrap;
                 position: absolute;
                 top: 0;
-                right: 0;
+                margin-left: 200px;
+               
+                   
+                    justify-content: left;
+                
                 @include searchbar-transition;
             }
             &__button{
@@ -230,21 +234,36 @@ $logo-color: #EB5757;
                 background: white;
                 position: absolute;
                 top: 0px;
-               
+               &::after{
+                   width: 100%;
+                   height: 100px;
+                   background: red;
+               }
             }
 
             &__filter{
                 height: 100%;
-                width: 100%;
+                width: 3000%;
+                position: relative;
+                left: -50%;
+                top: 297px;
+                z-index: -1;
                 background: rgba(79, 79, 79, 0.4);
                 
                 @include searchbar-transition
                 
             }
+
+            &__logo{
+                width: 80px;
+                margin-left: 30px;
+            }
         }
     }
 
     &--inactive{
+        display: flex;
+        justify-content: space-between;
         position: relative;
         width: 100%;
         height: 180px;
@@ -258,9 +277,7 @@ $logo-color: #EB5757;
             &__inputs{
                 display: flex;
                 flex-wrap: wrap;
-                position: absolute;
-                top: 0;
-                right: 0;
+                
                 @include searchbar-transition;
                 
                 
@@ -316,16 +333,20 @@ $logo-color: #EB5757;
 
 @media (min-width: 601px) and (max-width: 960px){
     .searchbar{
-        &__background{
-            background: red;
-        }
+      
         &--active{
            .searchbar__inputs{
                 position: absolute;
-                top: 40px;
+                top: 50px;
+                justify-content: center;
             }
             .searchbar__background{
                 height: 450px;
+               
+            }
+            .searchbar__inputs{
+                
+                margin-left: 0;
             }
         }
     }
@@ -336,11 +357,18 @@ $logo-color: #EB5757;
         &__logo{
             position: relative;
             top: -20px;
-            
+            height: 30px;
+            margin-bottom: 0;
         }
 
         &--active, &--inactive{
             .searchbar{
+
+                &__logo{
+                    display: block;
+                    position: absolute;
+                    left: 0;
+                }
                 &__inputs{
                     display: flex;
                     justify-content: center;
@@ -350,10 +378,18 @@ $logo-color: #EB5757;
                 }
             }
         }
+
+        &--inactive{
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
         &--active{
+            
             .searchbar{
                 &__background{
                     height: 700px;
+                    width: 100%;
                 }
 
                 &__location, &__guests{
@@ -381,7 +417,7 @@ $logo-color: #EB5757;
                 }
                 &__button{
                     position: relative;
-                    top: 430px;
+                    top: 420px;
                     margin: 0;
                 }
             }
